--- a/index.html
+++ b/index.html
@@ -38,9 +38,10 @@
 
         <!-- Prediction Display -->
         <div class="prediction-container">
-            <div class="prediction-circle">
+            <div class="prediction-circle" id="predictionCircle">
                 <div class="prediction-value" id="predictionValue">1.85x</div>
             </div>
+            <div class="click-hint">Click circle for new prediction</div>
         </div>
 
         <!-- Footer -->
